--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,7 +1,265 @@
-header {
-    max-width: 1305px;
-    margin: auto;
-    padding: 0 10px;
-    @media (min-width: 1025px){
-        padding: 0;
+@import "slick";
+@import "form";
+@import "spiner";
+
+@font-face{
+    font-family: 'Bodoni';
+    src: 
+    url('/fonts/ofont.ru_Bodoni.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
     }
+
+.visually-hidden:not(focus):not(active){
+	position: absolute;
+
+	width: 1px;
+	height: 1px;
+	border: 0;
+	padding: 0;
+
+	white-space: nowrap;
+
+	clip-path: inset(100%);	
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+
+html{
+    font-family: "Times New Roman", Times, serif; 
+    font-size: 18px;
+
+    textarea,input  {	
+        font-family: "Times New Roman", Times, serif; 
+        font-size: 14px;	
+        font-style: italic;	
+        letter-spacing: 0.62px;	
+        line-height: 18px;
+    }
+}
+
+header{
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.08);
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+ul{
+    list-style: none;
+}
+// ------------------------ HEADER
+.header__conteiner{
+    max-width: 970px;
+    height: 90px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+
+    .logo{
+        margin: auto 0;
+    }
+
+    .navigation__list{
+        display: flex;
+        justify-content: space-between;
+        @media (min-width: 320px) {
+            display: none;
+        }
+        @media (min-width: 1050px){
+                display: block;
+        }
+
+        li{
+            margin: auto;
+            margin-left: 24px;
+            a{
+                text-decoration: none;
+                color: #000000;	
+                font-family: Bodoni;	
+                font-size: 18px;	
+                line-height: 20px;
+
+                 &:hover,
+                 &:focus{
+                    color: #FFBD48;
+                }
+            }
+            #Home:hover,
+            {
+                fill: #FFBD48;
+            }
+        }
+    }
+}
+
+// ------------------------ TEXT BLOCK
+.text__conteiner{   
+    max-width: 970px;
+    margin: auto;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .main__text--left,
+    .main__text--right{
+        max-width: 470px;
+        font-family: 'Bodoni';
+        line-height: 20px;
+        margin: 20px;
+        margin-bottom: 50px;
+
+        // @media (min-width: 320px) {
+        //     margin: auto;
+        // }
+
+        p:nth-last-child(1){
+            margin-bottom: 0;
+        }
+    }
+
+    .main__text--center {	
+        display: flex;
+        min-height: 202px;	
+        width: 100%;	
+        border-radius: 12px;	
+        background-color: #FFFEFC;	
+        box-shadow: 0 6px 24px 0 rgba(54,53,41,0.16);
+        margin-bottom: 80px;
+
+        .center__conteiner{
+            margin: auto;
+            max-width: 470px;
+            position: relative;
+
+            &::after{
+                content: "";
+                position: absolute;
+                right: -63px;
+                bottom: 0;
+                height: 42px;	
+                width: 53px;	
+                background-color: transparent;
+                background-image: url(/image/Styles/quotes_close.svg);
+            }
+            &::before{
+                content: "";
+                position: absolute;
+                left: -63px;
+                height: 42px;	
+                width: 53px;	
+                background-color: transparent;
+                background-image: url(/image/Styles/quotes_open.svg);
+            }
+            
+            p{
+            font-family: Times;	
+            font-size: 24px;	
+            font-style: italic;	
+            line-height: 29px;
+            } 
+        }
+
+       
+    }
+
+    .text__icon{
+        float: left;
+        margin: 0 30px 0px 0;
+            img{
+                max-height: 138px;
+            }
+    }
+}
+
+// ------------------------ FOOTER
+.main-footer{
+    background-color: #484848;
+
+
+    .main-footer-conteiner{
+        max-width: 1170px;
+        margin: auto;
+        padding: 40px 0;
+
+        height: 159px;
+        
+        display: flex;
+        flex-wrap: wrap;
+        .footer__logo{
+            
+            max-width: 270px;
+            height: 150px;
+            position: relative;
+            img{
+                position: absolute;
+                right: 35px;
+                }
+            .bacground__block{
+                height: 72px;
+                width: 270px;
+                margin-top: 85px;
+                border-radius: 12px;	
+                background-color: #FFFEFC;	
+                box-shadow: 0 6px 24px 0 rgba(54,53,41,0.16);
+            }
+        }
+
+        
+
+        .footer__navigation{
+            margin-left: 30px;
+            ul{
+                display: flex;
+                flex-flow: column wrap;
+                max-height: 190px;
+                min-width: 400px;
+                margin: 0;
+                padding: 0;
+
+                li{
+                    display: block;
+                    margin-right: 50px;
+                    flex-grow: 1;
+                    overflow: hidden;
+                    padding-top: 30px;
+                    
+                    a{
+                        font-family: Bodoni;	
+                        font-size: 18px;	
+                        letter-spacing: 0.8px;
+                        line-height: 20px;
+                        text-decoration: none;
+                        color: #FFF;
+
+                        &:hover,
+                        &:focus{
+                            color: #FFBD48;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+    .all_rights_reserved{
+        background-color: #383636;
+        height: 35px;
+            p{
+                opacity: 0.5;	
+                color: #FFFFFF;	
+                font-family: Times;	
+                font-size: 12px;	
+                letter-spacing: 0.86px;	
+                line-height: 35px;	
+                text-align: center;
+            }
+    }
+}
+
+
+
+
