--- a/css/all.css
+++ b/css/all.css
@@ -4,6 +4,18 @@
   max-width: 1110px;
 }
 
+@media (min-width: 320px) {
+  .slider__conteiner {
+    margin: 10px auto;
+  }
+}
+
+@media (min-width: 1050px) {
+  .slider__conteiner {
+    margin: 30px auto;
+  }
+}
+
 .slider__conteiner .slider {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -20,7 +32,6 @@
   max-width: 970px;
   -webkit-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.08);
           box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.08);
-  background-position: inherit;
 }
 
 .slick-dots {
@@ -215,6 +226,18 @@
   display: flex;
   max-height: 158px;
   max-width: 470px;
+}
+
+@media (min-width: 320px) {
+  .form {
+    padding: 10px;
+  }
+}
+
+@media (min-width: 1050px) {
+  .form {
+    padding: 0;
+  }
 }
 
 .form .form-control {
@@ -465,11 +488,6 @@ html textarea, html input {
   line-height: 18px;
 }
 
-header {
-  -webkit-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.08);
-          box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.08);
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -479,7 +497,12 @@ ul {
   list-style: none;
 }
 
-.header__conteiner {
+header {
+  -webkit-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.08);
+          box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.08);
+}
+
+header .header__conteiner {
   max-width: 970px;
   height: 90px;
   margin: auto;
@@ -491,11 +514,23 @@ ul {
           justify-content: space-between;
 }
 
-.header__conteiner .logo {
+@media (min-width: 320px) {
+  header .header__conteiner {
+    padding: 0 20px;
+  }
+}
+
+@media (min-width: 1050px) {
+  header .header__conteiner {
+    padding: 0;
+  }
+}
+
+header .header__conteiner .logo {
   margin: auto 0;
 }
 
-.header__conteiner .navigation__list {
+header .header__conteiner .navigation__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -505,23 +540,23 @@ ul {
 }
 
 @media (min-width: 320px) {
-  .header__conteiner .navigation__list {
+  header .header__conteiner .navigation__list {
     display: none;
   }
 }
 
 @media (min-width: 1050px) {
-  .header__conteiner .navigation__list {
+  header .header__conteiner .navigation__list {
     display: block;
   }
 }
 
-.header__conteiner .navigation__list li {
+header .header__conteiner .navigation__list li {
   margin: auto;
   margin-left: 24px;
 }
 
-.header__conteiner .navigation__list li a {
+header .header__conteiner .navigation__list li a {
   text-decoration: none;
   color: #000000;
   font-family: Bodoni;
@@ -529,11 +564,11 @@ ul {
   line-height: 20px;
 }
 
-.header__conteiner .navigation__list li a:hover, .header__conteiner .navigation__list li a:focus {
+header .header__conteiner .navigation__list li a:hover, header .header__conteiner .navigation__list li a:focus {
   color: #FFBD48;
 }
 
-.header__conteiner .navigation__list li #Home:hover {
+header .header__conteiner .navigation__list li #Home:hover {
   fill: #FFBD48;
 }
 
@@ -550,18 +585,59 @@ ul {
           justify-content: space-between;
 }
 
+@media (min-width: 320px) {
+  .text__conteiner {
+    padding: 10px;
+  }
+}
+
+@media (min-width: 1050px) {
+  .text__conteiner {
+    padding: 0;
+  }
+}
+
 .text__conteiner .main__text--left,
 .text__conteiner .main__text--right {
   max-width: 470px;
   font-family: 'Bodoni';
-  line-height: 20px;
-  margin: 20px;
-  margin-bottom: 50px;
+}
+
+@media (min-width: 414px) {
+  .text__conteiner .main__text--left,
+  .text__conteiner .main__text--right {
+    margin-bottom: 25px;
+  }
+}
+
+@media (min-width: 1050px) {
+  .text__conteiner .main__text--left,
+  .text__conteiner .main__text--right {
+    margin-bottom: 50px;
+  }
 }
 
 .text__conteiner .main__text--left p:nth-last-child(1),
 .text__conteiner .main__text--right p:nth-last-child(1) {
   margin-bottom: 0;
+}
+
+@media (min-width: 320px) {
+  .text__conteiner .main__text--left,
+  .text__conteiner .main__text--right {
+    font-size: 16px;
+    line-height: 16px;
+    text-align: justify;
+  }
+}
+
+@media (min-width: 1050px) {
+  .text__conteiner .main__text--left,
+  .text__conteiner .main__text--right {
+    font-size: 18px;
+    line-height: 20px;
+    text-align: inherit;
+  }
 }
 
 .text__conteiner .main__text--center {
@@ -574,7 +650,18 @@ ul {
   background-color: #FFFEFC;
   -webkit-box-shadow: 0 6px 24px 0 rgba(54, 53, 41, 0.16);
           box-shadow: 0 6px 24px 0 rgba(54, 53, 41, 0.16);
-  margin-bottom: 80px;
+}
+
+@media (min-width: 414px) {
+  .text__conteiner .main__text--center {
+    margin-bottom: 10px;
+  }
+}
+
+@media (min-width: 1050px) {
+  .text__conteiner .main__text--center {
+    margin-bottom: 80px;
+  }
 }
 
 .text__conteiner .main__text--center .center__conteiner {
@@ -583,25 +670,69 @@ ul {
   position: relative;
 }
 
+@media (min-width: 414px) {
+  .text__conteiner .main__text--center .center__conteiner {
+    max-width: 250px;
+  }
+}
+
+@media (min-width: 1050px) {
+  .text__conteiner .main__text--center .center__conteiner {
+    max-width: 470px;
+  }
+}
+
 .text__conteiner .main__text--center .center__conteiner::after {
   content: "";
   position: absolute;
-  right: -63px;
   bottom: 0;
-  height: 42px;
-  width: 53px;
   background-color: transparent;
   background-image: url(/image/Styles/quotes_close.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 414px) {
+  .text__conteiner .main__text--center .center__conteiner::after {
+    right: -32px;
+    height: 21px;
+    width: 26px;
+  }
+}
+
+@media (min-width: 1050px) {
+  .text__conteiner .main__text--center .center__conteiner::after {
+    right: -63px;
+    height: 42px;
+    width: 53px;
+  }
 }
 
 .text__conteiner .main__text--center .center__conteiner::before {
   content: "";
   position: absolute;
-  left: -63px;
   height: 42px;
   width: 53px;
   background-color: transparent;
   background-image: url(/image/Styles/quotes_open.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 414px) {
+  .text__conteiner .main__text--center .center__conteiner::before {
+    left: -32px;
+    height: 21px;
+    width: 26px;
+  }
+}
+
+@media (min-width: 1050px) {
+  .text__conteiner .main__text--center .center__conteiner::before {
+    left: -63px;
+    height: 42px;
+    width: 53px;
+  }
 }
 
 .text__conteiner .main__text--center .center__conteiner p {
@@ -609,6 +740,20 @@ ul {
   font-size: 24px;
   font-style: italic;
   line-height: 29px;
+}
+
+@media (min-width: 414px) {
+  .text__conteiner .main__text--center .center__conteiner p {
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: 1050px) {
+  .text__conteiner .main__text--center .center__conteiner p {
+    font-size: 24px;
+    line-height: 29px;
+  }
 }
 
 .text__conteiner .text__icon {
@@ -627,8 +772,6 @@ ul {
 .main-footer .main-footer-conteiner {
   max-width: 1170px;
   margin: auto;
-  padding: 40px 0;
-  height: 159px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -636,10 +779,35 @@ ul {
       flex-wrap: wrap;
 }
 
+@media (min-width: 320px) {
+  .main-footer .main-footer-conteiner {
+    padding: 10px 0;
+  }
+}
+
+@media (min-width: 414px) {
+  .main-footer .main-footer-conteiner {
+    height: 100%;
+  }
+}
+
+@media (min-width: 1050px) {
+  .main-footer .main-footer-conteiner {
+    height: 159px;
+    padding: 40px 0;
+  }
+}
+
 .main-footer .main-footer-conteiner .footer__logo {
   max-width: 270px;
   height: 150px;
   position: relative;
+}
+
+@media (min-width: 320px) {
+  .main-footer .main-footer-conteiner .footer__logo {
+    margin: auto;
+  }
 }
 
 .main-footer .main-footer-conteiner .footer__logo img {
@@ -659,6 +827,12 @@ ul {
 
 .main-footer .main-footer-conteiner .footer__navigation {
   margin-left: 30px;
+}
+
+@media (min-width: 320px) {
+  .main-footer .main-footer-conteiner .footer__navigation {
+    margin-bottom: 20px;
+  }
 }
 
 .main-footer .main-footer-conteiner .footer__navigation ul {
