--- a/scss/all.scss
+++ b/scss/all.scss
@@ -29,6 +29,7 @@ html{
     font-family: "Times New Roman", Times, serif; 
     font-size: 18px;
 
+
     textarea,input  {	
         font-family: "Times New Roman", Times, serif; 
         font-size: 14px;	
@@ -38,9 +39,6 @@ html{
     }
 }
 
-header{
-    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.08);
-}
 
 body{
     margin: 0;
@@ -50,52 +48,63 @@ body{
 ul{
     list-style: none;
 }
-// ------------------------ HEADER
-.header__conteiner{
-    max-width: 970px;
-    height: 90px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-
-    .logo{
-        margin: auto 0;
-    }
-
-    .navigation__list{
+// ---------------------------- HEADER
+header{
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.08);
+    .header__conteiner{
+        max-width: 970px;
+        height: 90px;
+        margin: auto;
         display: flex;
         justify-content: space-between;
+
         @media (min-width: 320px) {
-            display: none;
+            padding: 0 20px;
         }
         @media (min-width: 1050px){
-                display: block;
+            padding: 0;
         }
 
-        li{
-            margin: auto;
-            margin-left: 24px;
-            a{
-                text-decoration: none;
-                color: #000000;	
-                font-family: Bodoni;	
-                font-size: 18px;	
-                line-height: 20px;
+        .logo{
+            margin: auto 0;
+        }
 
-                 &:hover,
-                 &:focus{
-                    color: #FFBD48;
-                }
+        .navigation__list{
+            display: flex;
+            justify-content: space-between;
+
+            @media (min-width: 320px) {
+                display: none;
             }
-            #Home:hover,
-            {
-                fill: #FFBD48;
+            @media (min-width: 1050px){
+                    display: block;
+            }
+
+            li{
+                margin: auto;
+                margin-left: 24px;
+                a{
+                    text-decoration: none;
+                    color: #000000;	
+                    font-family: Bodoni;	
+                    font-size: 18px;	
+                    line-height: 20px;
+
+                    &:hover,
+                    &:focus{
+                        color: #FFBD48;
+                    }
+                }
+                #Home:hover,
+                {
+                    fill: #FFBD48;
+                }
             }
         }
     }
 }
 
-// ------------------------ TEXT BLOCK
+// ---------------------------- TEXT BLOCK
 .text__conteiner{   
     max-width: 970px;
     margin: auto;
@@ -104,20 +113,41 @@ ul{
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media (min-width: 320px) {
+        padding: 10px;
+    }
+    @media (min-width: 1050px){
+        padding: 0;
+    }
+
     .main__text--left,
     .main__text--right{
         max-width: 470px;
         font-family: 'Bodoni';
-        line-height: 20px;
-        margin: 20px;
-        margin-bottom: 50px;
 
-        // @media (min-width: 320px) {
-        //     margin: auto;
-        // }
+        @media (min-width: 320px) {
+                
+        }
+        @media (min-width: 414px) {
+            margin-bottom: 25px;
+        }
+        @media (min-width: 1050px){
+            margin-bottom: 50px;
+        }
 
         p:nth-last-child(1){
             margin-bottom: 0;
+        }
+
+        @media (min-width: 320px) {
+            font-size: 16px;
+            line-height: 16px;
+            text-align: justify;
+        }
+        @media (min-width: 1050px){
+            font-size: 18px;
+            line-height: 20px;
+            text-align: inherit;
         }
     }
 
@@ -128,31 +158,77 @@ ul{
         border-radius: 12px;	
         background-color: #FFFEFC;	
         box-shadow: 0 6px 24px 0 rgba(54,53,41,0.16);
-        margin-bottom: 80px;
+        
+        @media (min-width: 320px) {
+                
+        }
+        @media (min-width: 414px) {
+            margin-bottom: 10px;
+        }
+        @media (min-width: 1050px){
+            margin-bottom: 80px;
+        }
 
         .center__conteiner{
             margin: auto;
             max-width: 470px;
             position: relative;
 
+            @media (min-width: 320px) {
+                
+            }
+            @media (min-width: 414px) {
+                max-width: 250px;
+            }
+            @media (min-width: 1050px){
+                max-width: 470px;
+            }
+
             &::after{
                 content: "";
                 position: absolute;
-                right: -63px;
                 bottom: 0;
-                height: 42px;	
-                width: 53px;	
+                	
                 background-color: transparent;
                 background-image: url(/image/Styles/quotes_close.svg);
+                background-size: contain;
+                background-repeat: no-repeat;
+                @media (min-width: 320px) {
+                    
+                }
+                @media (min-width: 414px) {
+                    right: -32px;
+                    height: 21px;	
+                    width: 26px;
+                }
+                @media (min-width: 1050px){
+                    right: -63px;
+                    height: 42px;	
+                    width: 53px;
+                }
             }
             &::before{
                 content: "";
                 position: absolute;
-                left: -63px;
                 height: 42px;	
                 width: 53px;	
                 background-color: transparent;
                 background-image: url(/image/Styles/quotes_open.svg);
+                background-size: contain;
+                background-repeat: no-repeat;
+                @media (min-width: 320px) {
+                    
+                }
+                @media (min-width: 414px) {
+                    left: -32px;
+                    height: 21px;	
+                    width: 26px;
+                }
+                @media (min-width: 1050px){
+                    left: -63px;
+                    height: 42px;	
+                    width: 53px;
+                }
             }
             
             p{
@@ -160,6 +236,18 @@ ul{
             font-size: 24px;	
             font-style: italic;	
             line-height: 29px;
+
+                @media (min-width: 320px) {
+                    
+                }
+                @media (min-width: 414px) {
+                    font-size: 18px;	
+                    line-height: 20px;
+                }
+                @media (min-width: 1050px){
+                    font-size: 24px;	
+                    line-height: 29px;
+                }
             } 
         }
 
@@ -175,7 +263,7 @@ ul{
     }
 }
 
-// ------------------------ FOOTER
+// ---------------------------- FOOTER
 .main-footer{
     background-color: #484848;
 
@@ -183,17 +271,35 @@ ul{
     .main-footer-conteiner{
         max-width: 1170px;
         margin: auto;
-        padding: 40px 0;
-
-        height: 159px;
         
         display: flex;
         flex-wrap: wrap;
+
+        @media (min-width: 320px) {
+            padding: 10px 0;
+        }
+        @media (min-width: 414px) {
+            height: 100%;
+        }
+        @media (min-width: 1050px){
+            height: 159px;
+            padding: 40px 0;
+        }
+
         .footer__logo{
             
             max-width: 270px;
             height: 150px;
             position: relative;
+
+            @media (min-width: 320px) {
+                margin: auto;
+            }
+            @media (min-width: 414px) {
+            }
+            @media (min-width: 1050px){
+            }
+
             img{
                 position: absolute;
                 right: 35px;
@@ -208,10 +314,15 @@ ul{
             }
         }
 
-        
-
         .footer__navigation{
             margin-left: 30px;
+            @media (min-width: 320px) {
+                margin-bottom: 20px;
+            }
+            @media (min-width: 414px) {
+            }
+            @media (min-width: 1050px){
+            }
             ul{
                 display: flex;
                 flex-flow: column wrap;
