--- a/scss/all.scss
+++ b/scss/all.scss
@@ -190,7 +190,7 @@ header{
                 bottom: 0;
                 	
                 background-color: transparent;
-                background-image: url(/image/Styles/quotes_close.svg);
+                background-image: url(../image/Styles/quotes_close.svg);
                 background-size: contain;
                 background-repeat: no-repeat;
                 @media (min-width: 320px) {
@@ -213,7 +213,7 @@ header{
                 height: 42px;	
                 width: 53px;	
                 background-color: transparent;
-                background-image: url(/image/Styles/quotes_open.svg);
+                background-image: url(../image/Styles/quotes_open.svg);
                 background-size: contain;
                 background-repeat: no-repeat;
                 @media (min-width: 320px) {
