--- a/css/all.css
+++ b/css/all.css
@@ -74,7 +74,7 @@
   height: 20px;
   border: none;
   background: transparent;
-  background-image: url("/image/Styles/Arrow-Filled/16x16/Arrow.svg");
+  background-image: url("../image/Styles/Arrow-Filled/16x16/Arrow.svg");
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.25;
@@ -89,7 +89,7 @@
 }
 
 .slick-next:hover {
-  background-image: url("/image/Styles/Arrow_hover.svg");
+  background-image: url("../image/Styles/Arrow_hover.svg");
 }
 
 .slick-prev {
@@ -97,7 +97,7 @@
   height: 20px;
   border: none;
   background: transparent;
-  background-image: url("/image/Styles/Arrow-Filled/16x16/Arrow.svg");
+  background-image: url("../image/Styles/Arrow-Filled/16x16/Arrow.svg");
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.25;
@@ -114,7 +114,7 @@
 }
 
 .slick-prev:hover {
-  background-image: url("/image/Styles/Arrow_hover.svg");
+  background-image: url("../image/Styles/Arrow_hover.svg");
 }
 
 .slick-slider {
