--- a/scss/all.scss
+++ b/scss/all.scss
@@ -256,7 +256,15 @@ header{
 
     .text__icon{
         float: left;
-        margin: 0 30px 0px 0;
+
+        @media (min-width: 320px) {
+            margin: 0 15px 10px 0;   
+        }
+        @media (min-width: 414px) {
+        }
+        @media (min-width: 1050px){
+            margin: 0 30px 0px 0;
+        }
             img{
                 max-height: 138px;
             }
