--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,18 +1,58 @@
 .form {
     display: flex;
-    max-height: 158px;
     max-width: 470px;
 
     @media (min-width: 320px) {
         padding: 10px;
-
+        flex-wrap: wrap;
     }
     @media (min-width: 414px) {
+        // max-height: 158px;
+        // flex-wrap: nowrap;
     }
     @media (min-width: 1050px){
         padding: 0;
     }
 
+    .form__conteiner{
+        display: flex;
+        flex-wrap: wrap; 
+        margin: auto;
+        width: -webkit-fill-available;
+        @media (min-width: 320px) {
+            margin-bottom: 16px;
+        }
+        @media (min-width: 414px) {
+            // margin-bottom: 58px;
+        }
+        @media (min-width: 1050px){
+        }
+
+        .name{
+            box-sizing: border-box;
+            @media (min-width: 320px) {
+                margin-bottom: 16px;
+            }
+            @media (min-width: 413px) {
+                // margin: 0 16px 16px 0;
+            }
+            @media (min-width: 1050px){
+                margin: 0 16px 16px 0;
+            }
+        }
+    
+        .email{
+            @media (min-width: 320px) {
+            }
+            @media (min-width: 413px) {
+                // margin: 0 16px 0 0;
+            }
+            @media (min-width: 1050px){
+                margin: 0 16px 0 0;
+            }
+            
+        }
+    }
 
     .form-control{
         border: 1px solid #E9EBF0;	
@@ -43,28 +83,32 @@
         
     }
 
-    .name{
-        margin: 0 16px 16px 0;
-    }
-
-    .email{
-        margin: 0 16px 0 0;
-    }
-
-    .form__conteiner{
-        display: flex;
-        flex-wrap: wrap; 
-        margin-bottom: 58px;
-
-
-    }
     .form-group{
         display: flex;
         flex-wrap: wrap;
+        margin: auto;
+        width: -webkit-fill-available;
+        @media (min-width: 374px) {
+            // width: 296px;
+        }
+        @media (min-width: 414px) {
+            // width: auto;
+        }
+        @media (min-width: 1050px){
+
+        }
 
         .message{
             margin-bottom: 16px;
-            max-width: 230px;
+            @media (min-width: 320px) {
+                // width: 100%;
+            }
+            @media (min-width: 414px) {
+                // max-width: 230px;
+            }
+            @media (min-width: 1050px){
+
+            }
         }
 
         button{
